src/test/deca/syntax/invalid/renduInter01/06while_missing_parent.deca
// Description:
//      Programme lexicalement incorrect
//      => une boucle while doit posséder une condition entre parenthèses "while (condition) { ... }"
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : token 'x' inattendu => token '(' attendu

{
    int x = 4;
    while x == 4 {
        x = 3;
    }

}

